Use Point class instead of integer pairs